frontend/assets/css/variables.scss
:root {
  // Utils
  --radius: 3px;

  --font-primary: '1.5rem';
  --font-secondary: '1.2rem';

  --font-color-primary: '#000';
  --font-color-secondary: #676767;

  // Colors
  --color-primary: #000;
  --color-secondary: #3f65c2;
  --color-primary-negative: #fff;
  --color-red: red;

  // Indexes
  --nav-index: 10000;
}

$breakpoint:960px;

